--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-BACKEND_BASE_URI=https://api.carlfreyer.com
-BACKEND_POSTS_URI=/post
+VITE_BACKEND_BASE_URI=https://api.carlfreyer.com
+VITE_BACKEND_POSTS_URI=/post
